# goodenough

./: .gitignore  LICENSE  Untitled.ipynb  actions.py  aux.py  classes.txt  convert_voc.py  dataset.yaml  db.json  db.py  detection.py  device.py  dino_detect.py  distill_base.py  enemies.txt  environment.txt  extract_db.py  flake.nix  get_profiles.py  main.py  ocr.py  plot.py  pyproject.toml  wiki.html  yoloe_predict.py
dataset/: classes.txt
dataset/labels/: train.cache  val.cache
dataset/labels/train/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  42.txt  43.txt  44.txt  45.txt  (+35 more)
dataset/labels/val/: 28.txt  33.txt  34.txt  41.txt  51.txt  64.txt  7.txt  70.txt  71.txt
dataset/voc/: 0.xml  1.xml  10.xml  11.xml  12.xml  13.xml  14.xml  15.xml  16.xml  17.xml  18.xml  19.xml  2.xml  20.xml  21.xml  22.xml  23.xml  24.xml  25.xml  26.xml  27.xml  28.xml  29.xml  3.xml  30.xml  31.xml  32.xml  33.xml  34.xml  35.xml  36.xml  37.xml  38.xml  39.xml  4.xml  40.xml  41.xml  42.xml  43.xml  44.xml  (+40 more)
