[project]
name = "goodenough"
version = "0.1.0"
description = "AI-assisted decision-making tool for Arknights"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "requests>=2.32.3",
    "supervision>=0.25.1",
    "ultralytics>=8.3.120",
]
